--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,40 +1,395 @@
-* {
-    padding: 0;
+.wrapper {
+}
+
+.header {
+  z-index: 1;
+  position: relative;
+}
+
+.header__nav {
+  position: absolute;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  height: 100px;
+}
+
+.header__nav-list {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  list-style: none;
+  padding: 0px;
+}
+
+.header__nav-item {
+  font-size: 1.4rem;
+  text-decoration: none;
+  margin-left: 15px;
+}
+
+.header__nav-link {
+  color: var(--white-color);
+  text-decoration: none;
+  border: 1px solid var(--white-color);
+  border-radius: 15px;
+  padding: 4px 10px;
+  text-transform: uppercase;
+}
+
+.container {
+}
+
+.container__intro {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 678px;
+}
+
+.container__intro-video {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.overlay {
+  position: absolute;
+  background-color: #001701;
+  width: 100%;
+  height: 100%;
+  opacity: 0.5;
+}
+
+.container__intro-box {
+  position: relative;
+}
+
+.intro__box-content {
+  text-align: center;
+  margin-bottom: 35px;
+}
+
+.box__content-logo {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
+
+.box__content-text {
+  font-size: 2.4rem;
+  font-weight: 400;
+  color: var(--white-color);
+  line-height: 4rem;
+  /* white-space: pre-line; */
+}
+
+.intro__box-active {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  height: 50px;
+}
+
+.box__active-detail {
+  background-color: #fff;
+  display: flex;
+  align-items: center;
+  padding: 0 28px;
+  border-radius: 8px;
+  margin-right: 15px;
+}
+
+.active__detail-label {
+  font-weight: 700;
+  font-size: 1.6rem;
+  margin-right: 4px;
+}
+
+.active__detail-radio-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.active__detail-radio-item {
+  font-size: 1.4rem;
+  margin-right: 16px;
+  padding: 0 28px;
+  display: flex;
+  align-items: center;
+  position: relative;
+}
+
+.outer-circle {
+  display: block;
+  position: absolute;
+  border: 3px solid #aaaaaa;
+  border-radius: 100%;
+  height: 20px;
+  width: 20px;
+  /* top: 10px; */
+  /* left: 0px; */
+  z-index: 5;
+  transition: border 0.25s linear;
+  -webkit-transition: border 0.25s linear;
+  &:before {
+    display: block;
+    position: absolute;
+    content: "";
+    border-radius: 100%;
+    height: 8px;
+    width: 8px;
+    top: 3px;
+    left: 3px;
+    margin: auto;
+    /* transition: background 0.25s linear; */
+    /* -webkit-transition: background 0.25s linear; */
+  }
+}
+
+input[type="radio"] {
+  &.w3-radio ~ .outer-circle {
+    border-color: lighten(#009999, 10%);
+  }
+}
+
+input[type="radio"].w3-radio:checked ~ .outer-circle::before {
+  background: #009999;
+}
+
+input[type="radio"].w3-radio:checked ~ .outer-circle {
+  border: 3px solid #009999;
+}
+
+input[type="radio"].w3-radio {
+  position: absolute;
+  /* visibility: hidden;   */
+  width: 30px;
+  height: 30px;
+}
+
+.active__detail-text {
+  margin: 0 0 -3px 10px;
+}
+
+.box__active-btn {
+}
+
+.box__active-btn-click {
+  height: 100%;
+  background-color: var(--primary-color);
+  border-radius: 8px;
+  padding: 0 20px;
+  color: var(--white-color);
+  border: 0px solid #ccc;
+  font-weight: 600;
+}
+.container__features {
+  padding: 56px 0;
+}
+
+.container__features-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  margin: 0 -50px;
+}
+
+.container__features-item {
+  max-width: 25%;
+  padding: 0 10px;
+  text-align: center;
+  flex: 0 1 25%;
+}
+
+.container__features-content-heading {
+  margin: 15px 0 7px 0;
+  font-size: 2rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.container__features-content-text {
+  margin: 0 -10px;
+  color: #939eaa;
+  line-height: 1.25;
+  font-size: 16px;
+  /* white-space: pre-wrap; */
+}
+
+.container__app {
+  margin: 52px 0 76px;
+  position: relative;
+  padding: 92px 0 60px;
+}
+
+.container__app-box {
+  display: flex;
+  align-items: center;
+  position: relative;
+  z-index: 1;
+}
+
+.app__box-content {
+  flex: 0 0 35%;
+  max-width: 35%;
+}
+
+.app__box-content-heading {
+  position: relative;
+  margin-bottom: 70px;
+  font-size: 3.4rem;
+  font-weight: 600;
+  padding-bottom: 30px;
+}
+
+.container__result--content-headingshow--separate::after,
+  .app__box-content-heading--separate::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 80px;
+  border: 1px solid var(--primary-color);
+  left: 0;
+  top: 100%;
+  box-sizing: inherit;
+}
+
+.app__box-content-text {
+  margin-bottom: 70px;
+  font-size: 2rem;
+  line-height: 1.2;
+  color: #939eaa;
+  margin-right: 10px;
+}
+
+.app__box-content-btn {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.btn-app-store {
+  text-decoration: none;
+}
+.btn-google-play {
+  text-decoration: none;
+  margin-left: 40px;
+}
+
+.ls-is-cached {
+  height: auto;
+  width: 100%;
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.app__box-img {
+  flex: 0 0 63.4%;
+  max-width: 63.4%;
+  margin-left: 1.6%;
+}
+
+.container__app-pictrue {
+  width: 49%;
+  /* width: 100%; */
+  height: 100%;
+  position: relative;
+  right: 0;
+  top: 0;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.container__app--pictrue {
+  background-image: url(https://www.mektoube.fr/images/temp/new-bg.jpg);
+  height: 100px;
+  width: 100px;
+  background-size: 220%;
+  background-position: 20px 8%;
+  background-repeat: no-repeat;
+  position: absolute;
+}
+
+.container__result {
+  padding: 158px 0 90px;
+  position: relative;
+  display: flex;
+}
+
+.container__result::after {
+  content: "";
+  height: 100%;
+  background-color: #f3f3f3;
+  position: absolute;
+  left: 0;
+  width: 96%;
+  top: 0;
+  z-index: -1;
+}
+
+.container__result-content {
+  /* padding: 0;
     margin: 0;
-    box-sizing: border-box;
+    outline: 0;
+    box-sizing: border-box; */
+    display: flex;
 }
 
-html {
-    /* scroll-behavior: smooth; hành động quận */
-    scroll-behavior: smooth;
-    font-family: Arial, Helvetica, sans-serif;
+.container__result--content-heading {
+  flex: 0 0 25%;
+  max-width: 25%;
 }
 
-
-/* 
-1. từ ngoài vào trong 
-2. từ trên xuống dưới
-3. từ tổng quan đến chi tiết
- */
-
-
-/* 
-1. vị trí
-2. kích thước(width,height)
-3. màu sắc
-4.kiểu dáng( kiểu chũ , hình dáng : tròn ,vuông) */
-
-
-/* common */
-.clear {
-    /* clear: both; đây là cách hai (giống overflow: hidden) */
-    clear: both;
+.container__result--content-headingshow {
+  line-height: 1.35;
+  margin-bottom: 40px;
+  padding-bottom: 28px;
+  font-size: 2.9rem;
+  font-weight: 600;
+  position: relative;
 }
 
-.text-white {
-    color: #fff !important;
+.container__result--content-body {
+  position: relative;
+  flex: 0 0 61%;
+  max-width: 61%;
+  margin-left: 4%;
+  background-color: #009999;
+  height: 100px;
+  margin-bottom: 100px;
 }
 
-.text-center{
-    text-align: center !important;
+.container__result--content-slide {
+  margin-bottom: 30px;
+  position: relative;
+  box-sizing: border-box;
+}
+.container__result--content-slide-list {
+  height: 252px;
+  display: block;
+  position: relative;
+  overflow: hidden;
+  
+}
+
+.slick-track {
+  position: relative;
+  opacity: 1;
+  height: 1512px;
+  transform: translate3d(0px, 0px, 0px);
+  top: 0;
+  left: 0;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.container__result--content-slide-showlist {
+
 }
